2008.06.10

* Updated license.

2008.06.08

* Added a dependencies file.
* Added missing import in setup.py.

2008.06.07

* Added a notice in the examples directory that the examples are going away.
* Updated the README with a note about where to lool fofr examples (the test
directory).
* Updated the setup.py to find all subpackages.

2008.03.13

* Lots of changes to the automation script.
* Fixed a syntax error in the script.
* Moved date var out of python script and into repo vars "script".
* Added two more values to be passed to the python script.
* Set the repo vars to production (non-testing) values.
* Minor code tweaks.
* Fixed some typos in unfinished code just to get the tests passing.
* Added support for getting the test name in Python 2.5.
* Updated the commit script so that tests can actually run.
* Changed default behaviour for commit script to run tests, skipping if a flag
is passed (as opposed to only running tests if a flag is passed).
* Added functions to the commit script for better organziation as well as a
check for syncing Google code to SourceForge.
* Removed exit code 1s from python script for convenience of use/parsing by
other scripts.
* Removed extraneous trailing slash from scp command.
* Updated sync script to remove gzip file when done.
* Updated sync script with messages to stdout as well as the functionality of
creating a local mirror if one does not already exist.
* Commented out some testing code.

2008.03.12

* Added scripts for creating a local mirror and syncing that mirror from
google.
* Removed extraneous slashes from scripts.
* Added more variables for use by other scripts (and changed some values for
testing purposes).
* Added more scripts for 1) uploading to SF.net, 2) automating the
form-processing, and 3) controlling the whole process.

2008.03.01

* Started getting the rest of the tests ready.

2008.02.29

* Added a print statement to the generate script.
* Moved Elements.TAB, .LINE and .RawCode into document.base.